package model;

public enum HobbyType {
    INDOOR,
    OUTDOOR,
    SPORT,
    ACTIVE,
    INACTIVE,
    GAMES
}
