@startuml
'https://plantuml.com/class-diagram

class Adress
class Person
class Hobby
class ContactInfo
class ZipCode
enum HobbyType


Person : String name
Person : int age


Adress : String StreetName
Adress : int StreetNumber


ContactInfo : String email
ContactInfo : int phoneNumber


ZipCode : String cityName
ZipCode : String regionName
ZipCode : String municipalityName

Hobby : String name
Hobby : String wikilink
Hobby : String category

HobbyType : INDOOR
HobbyType : OUTDOOR
HobbyType : SPORT
HobbyType : ACTIVE
HobbyType : INACTIVE
HobbyType : GAMES


Person <--> ContactInfo
Person <--> Hobby
Person <--> Adress
Adress <--> ZipCode
HobbyType <--> Hobby



@enduml